modified according to FronEnd Mentor

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     }
     .heading{
       font-weight: bolder;
-      font-size: clamp(15px, 6.4vw, 20px);
+      font-size: clamp(20px, 6.4vw, 25px);
     }
     .heading:hover{
       color: hsl(47, 88%, 63%);
@@ -75,6 +75,9 @@
       margin: 0;
       padding-bottom: 0.5rem;
       font-size: clamp(10px, 6.4vw, 16px)
+    }
+    .profilePic{
+      width: 40px;
     }
     @media(max-width:375px){
       .main{
@@ -101,7 +104,7 @@
       <p class="generalText">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
       <div class="container profile">
-        <img src="./assets/images/image-avatar.webp" alt="profile image"/>
+        <img src="./assets/images/image-avatar.webp" alt="profile image" class="profilePic"/>
         <p><strong> Hooper</strong></p>
       </div>
       <hr />
