--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     }
     .heading:hover{
       color: hsl(47, 88%, 63%);
+      cursor: pointer;
     }
     .generalText1{
       color: hsl(0, 0%, 7%);
