matched with design img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
 
-    
     html{
       font-family: "Figtree", sans-serif;
       font-optical-sizing: auto;
@@ -27,8 +26,11 @@
       border-radius: 20px;
       border: 1px solid black;
       box-shadow: 8px 8px hsl(0, 0%, 7%);
-      max-width: 336px;
+      max-width: 384px; /*336px*/
       padding: 24px;
+    }
+    .content{
+      max-width: 336px;
     }
     body{
       background-color: hsl(47, 88%, 63%);
@@ -36,7 +38,7 @@
       height: 100vh;
       align-items: center;
       justify-content: center;
-      
+      margin: 0;
     }
     .post{
       margin-bottom: 24px;
