remove extra CSS Code

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       color: hsl(47, 88%, 63%);
       cursor: pointer;
     }
+    button:hover{
+      cursor: pointer;
+    }
     .generalText1{
       color: hsl(0, 0%, 7%);
       font-size: clamp(10px, 6.4vw, 14px);
