--- a/index.html
+++ b/index.html
@@ -8,105 +8,8 @@
   
   <title>Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+  <link rel="stylesheet" href="./styles.css" />
 
-    html{
-      font-family: "Figtree", sans-serif;
-      font-optical-sizing: auto;
-      font-style: normal;
-    }
-
-    .main{
-      display: flex;
-      flex-direction: column;
-      background-color: hsl(0, 0%, 100%);
-      border-radius: 20px;
-      border: 1px solid black;
-      box-shadow: 8px 8px hsl(0, 0%, 7%);
-      max-width: 384px; /*336px*/
-      padding: 24px;
-    }
-    .content{
-      max-width: 336px;
-    }
-    body{
-      background-color: hsl(47, 88%, 63%);
-      display: flex;
-      height: 100vh;
-      align-items: center;
-      justify-content: center;
-      margin: 0;
-    }
-    .post{
-      margin-bottom: 24px;
-      border-radius: 10px;
-      width: 100%;
-      /* height: 200px; */
-    }
-    button{
-      background-color: hsl(47, 88%, 63%);
-      padding-top: 4px;
-      padding-bottom: 4px;
-      padding-left: 12px;
-      padding-right: 12px;
-      border-radius: 4px;
-      font-weight: 800; /*extra bold*/
-      border: none;
-      margin-bottom: 12px;
-      font-size: clamp(10px, 6.4vw, 14px);
-    }
-    .heading{
-      font-weight: 800; /*extra bold*/
-      font-size: clamp(20px, 6.4vw, 24px);
-      margin-bottom: 12px;
-    }
-    .heading:hover{
-      color: hsl(47, 88%, 63%);
-      cursor: pointer;
-    }
-    button:hover{
-      cursor: pointer;
-    }
-    .generalText1{
-      color: hsl(0, 0%, 7%);
-      font-size: clamp(10px, 6.4vw, 14px);
-      margin-bottom: 12px;
-      font-weight: 500; /*medium*/
-    }
-    .generalText2{
-      color: hsl(0, 0%, 42%);
-      font-size: clamp(10px, 6.4vw, 16px);
-      margin-bottom: 12px;
-      font-weight: 500; /*medium*/
-    }
-    .profile{
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      margin-top: 24px;
-    }
-    p{
-      margin: 0;
-      line-height: 150%;
-      letter-spacing: 0px;
-    }
-    .profile p{
-      font-size: clamp(10px, 6.4vw, 14px);
-      font-weight: 800; /*extra bold*/
-      color: hsl(0, 0%, 7%);
-    }
-    .profilePic{
-      width: 32px;
-    }
-    @media(max-width:375px){
-      .main{
-        max-width: 290px;
-      }
-    }
-  </style>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
